*******************
* Changelog
*******************

2013-03-29  Fabian Buske	v0.1.3
	- specification of MAXIMALTARGETS enabled via parameter
	- default parameter setting for inspector adjusted to improve runtime
	- visual guide for exon locations added to block view in target cluster overview
	- bash shell compatibility improved
	- script name conflict resolved
	- default output processing set to serial mode 

2012-07-24  Fabian Buske	v0.1.2
	- Version number of dependend programs reported in log
	- Distinguish off-targets with zero shorter off-targets from ones that have not been processed due to the minimum length constraint 
	- Bugfix: removed duplicate entries in detailed view

2012-07-12  Fabian Buske	v0.1.1
	- Datatables FixedHeader plugin and jquery slider incompatibility patched
	- Improved data loading and user feedback during processing

2012-07-10  Fabian Buske	v0.1.0
	- First release of Triplex-Inspector